[metadata]
name = tests
description = slow process of refactoring old codes
author = Piotr Bigos
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    = objects
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160